--- a/ControlFirmware/ControlFirmware.ioc
+++ b/ControlFirmware/ControlFirmware.ioc
@@ -61,8 +61,9 @@ Mcu.IP4=RCC
 Mcu.IP5=SYS
 Mcu.IP6=TIM1
 Mcu.IP7=TIM4
-Mcu.IP8=USART2
-Mcu.IPNb=9
+Mcu.IP8=TIM6
+Mcu.IP9=USART2
+Mcu.IPNb=10
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -75,6 +76,7 @@ Mcu.Pin14=PB7
 Mcu.Pin15=VP_SYS_VS_Systick
 Mcu.Pin16=VP_SYS_VS_DBSignals
 Mcu.Pin17=VP_TIM4_VS_ClockSourceINT
+Mcu.Pin18=VP_TIM6_VS_ClockSourceINT
 Mcu.Pin2=PA1
 Mcu.Pin3=PA8
 Mcu.Pin4=PA9
@@ -83,7 +85,7 @@ Mcu.Pin6=PA11
 Mcu.Pin7=PA12
 Mcu.Pin8=PA13
 Mcu.Pin9=PA14
-Mcu.PinsNb=18
+Mcu.PinsNb=19
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
@@ -238,6 +240,8 @@ TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,PeriodNoDither,CounterMode
 TIM4.PeriodNoDither=3749
+TIM6.IPParameters=Prescaler
+TIM6.Prescaler=149
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_DBSignals.Mode=DisableDeadBatterySignals
@@ -246,5 +250,7 @@ VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
 VP_TIM4_VS_ClockSourceINT.Mode=Internal
 VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
+VP_TIM6_VS_ClockSourceINT.Mode=Enable_Timer
+VP_TIM6_VS_ClockSourceINT.Signal=TIM6_VS_ClockSourceINT
 board=custom
 isbadioc=false
