--- a/ControlFirmware/ControlFirmware.ioc
+++ b/ControlFirmware/ControlFirmware.ioc
@@ -1,20 +1,43 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,master,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-1\#ChannelRegularConversion=ADC_CHANNEL_1
+ADC1.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC1.EOCSelection=ADC_EOC_SEQ_CONV
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIG_T4_TRGO
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag,master,EOCSelection,ExternalTrigConv,Rank-1\#ChannelRegularConversion,Channel-1\#ChannelRegularConversion,SamplingTime-1\#ChannelRegularConversion,OffsetNumber-1\#ChannelRegularConversion,NbrOfConversion,Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion
+ADC1.NbrOfConversion=3
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-1\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.Rank-1\#ChannelRegularConversion=2
+ADC1.Rank-2\#ChannelRegularConversion=3
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_1
-ADC2.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,OffsetNumber-0\#ChannelRegularConversion,NbrOfConversionFlag
-ADC2.NbrOfConversionFlag=1
-ADC2.OffsetNumber-0\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC2.Rank-0\#ChannelRegularConversion=1
-ADC2.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+Dma.ADC1.2.Direction=DMA_PERIPH_TO_MEMORY
+Dma.ADC1.2.EventEnable=DISABLE
+Dma.ADC1.2.Instance=DMA1_Channel3
+Dma.ADC1.2.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.2.MemInc=DMA_MINC_ENABLE
+Dma.ADC1.2.Mode=DMA_CIRCULAR
+Dma.ADC1.2.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
+Dma.ADC1.2.PeriphInc=DMA_PINC_DISABLE
+Dma.ADC1.2.Polarity=HAL_DMAMUX_REQ_GEN_RISING
+Dma.ADC1.2.Priority=DMA_PRIORITY_LOW
+Dma.ADC1.2.RequestNumber=1
+Dma.ADC1.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,SignalID,Polarity,RequestNumber,SyncSignalID,SyncPolarity,SyncEnable,EventEnable,SyncRequestNumber
+Dma.ADC1.2.SignalID=NONE
+Dma.ADC1.2.SyncEnable=DISABLE
+Dma.ADC1.2.SyncPolarity=HAL_DMAMUX_SYNC_NO_EVENT
+Dma.ADC1.2.SyncRequestNumber=1
+Dma.ADC1.2.SyncSignalID=NONE
 Dma.Request0=USART2_RX
 Dma.Request1=USART2_TX
-Dma.RequestsNb=2
+Dma.Request2=ADC1
+Dma.RequestsNb=3
 Dma.USART2_RX.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.USART2_RX.0.EventEnable=DISABLE
 Dma.USART2_RX.0.Instance=DMA1_Channel1
@@ -54,16 +77,15 @@ GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
 Mcu.Family=STM32G4
 Mcu.IP0=ADC1
-Mcu.IP1=ADC2
-Mcu.IP2=DMA
-Mcu.IP3=NVIC
-Mcu.IP4=RCC
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM4
-Mcu.IP8=TIM6
-Mcu.IP9=USART2
-Mcu.IPNb=10
+Mcu.IP1=DMA
+Mcu.IP2=NVIC
+Mcu.IP3=RCC
+Mcu.IP4=SYS
+Mcu.IP5=TIM1
+Mcu.IP6=TIM4
+Mcu.IP7=TIM6
+Mcu.IP8=USART2
+Mcu.IPNb=9
 Mcu.Name=STM32G431K(6-8-B)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
@@ -91,9 +113,11 @@ Mcu.UserConstants=
 Mcu.UserName=STM32G431KBTx
 MxCube.Version=6.1.0
 MxDb.Version=DB.6.0.10
+NVIC.ADC1_2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -103,11 +127,12 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
+NVIC.TIM4_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0.Locked=true
 PA0.Mode=IN1-Single-Ended
-PA0.Signal=ADC2_IN1
+PA0.Signal=ADC1_IN1
 PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA1.GPIO_Label=GPIO_FAULT
 PA1.GPIO_PuPd=GPIO_PULLUP
@@ -182,7 +207,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_ADC2_Init-ADC2-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM4_Init-TIM4-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true,8-MX_TIM6_Init-TIM6-false-HAL-true
 RCC.ADC12Freq_Value=150000000
 RCC.AHBFreq_Value=150000000
 RCC.APB1Freq_Value=150000000
@@ -238,8 +263,9 @@ SH.S_TIM4_CH2.ConfNb=1
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.CounterMode=TIM_COUNTERMODE_CENTERALIGNED1
-TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,PeriodNoDither,CounterMode
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2,PeriodNoDither,CounterMode,TIM_MasterOutputTrigger
 TIM4.PeriodNoDither=3749
+TIM4.TIM_MasterOutputTrigger=TIM_TRGO_UPDATE
 TIM6.IPParameters=Prescaler
 TIM6.Prescaler=149
 USART2.IPParameters=VirtualMode-Asynchronous
